fixed bug with on light switches while in dark mode

--- a/public/main.sass
+++ b/public/main.sass
@@ -77,6 +77,7 @@ body
 	.light-switch
 		&.on
 			background-color: #fcf8e3
+			color: #8a6d3b
 		&:focus
 			outline: none
 
